change connection from soap to rest

--- a/IranDargah/views/css/irandargah.css
+++ b/IranDargah/views/css/irandargah.css
@@ -1,5 +1,5 @@
 p.payment_module a.irandargah {
-    background: url('../img/irandargah.png') 99% 15px no-repeat #fbfbfb;
+    background: url('../img/irandargah.svg') 99% 15px no-repeat #fbfbfb;
 }
 
 p.payment_module a.irandargah:after {
